# pyssr

./: .gitignore  .gitmodules  Makefile.am  README.md  configure.ac
py/: Makefile.am  pyrendererwrapper.h  ssr.cpp  ssr_test.py
src/: brsrenderer.h
